--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,3 +55,9 @@ repos:
     entry: ghcr.io/igorshubovych/markdownlint-cli:v0.35.0
     language: docker_image
     files: \.(md|mdown|markdown)$
+## Shell #####################################################################
+- repo: https://github.com/koalaman/shellcheck-precommit
+  rev: v0.9.0
+  hooks:
+  - id: shellcheck
+    files: \.sh$
